<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".CreateLunchFragment">

   <!--<string name="Ticket_URl_Submit">Link to Purchase Tickets:</string>-->
    <!---->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Share_Title"
        android:id="@+id/textview_share_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textview_date_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_share_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Date_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_date_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Hint_Date"
        android:layout_below="@id/textview_date_submit"
        android:background="#000000"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/textview_venue_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_date_time"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Venue_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/edit_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_venue_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_address_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_venue"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Address_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_address_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_city_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_address"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/City_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_city_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_zipcode_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_city"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Zipcode_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/edit_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_zipcode_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_url_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_zipcode"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Venue_URL_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/edit_venue_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_url_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_artist_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_venue_url"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Artist_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/edit_artist_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_artist_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_artist_2_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_artist_1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Artist_2_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_artist_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_artist_2_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_artist_3_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_artist_2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Artist_3_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_artist_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_artist_3_submit"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_ticket_url_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_artist_3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Ticket_URl_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_ticket_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_ticket_url_submit"
        android:singleLine="true"/>

</RelativeLayout>