<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".CreateLunchFragment">

    <!--Why is this so ugly? -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Share_Title"
        android:id="@+id/textview_share_title_3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textview_date_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_share_title_3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Date_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_date_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Hint_Date"
        android:layout_below="@id/textview_date_submit"
        android:background="#000000"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/textview_ticket_url_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_date_time"
        android:layout_marginBottom="5dp"
        android:text="@string/Ticket_URl_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_ticket_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_ticket_url_submit"
        android:singleLine="true"
        android:layout_marginBottom="20dp"
        />
    
    <Button
        android:id="@+id/button_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ticket_url"
        android:padding="15dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:text="@string/Submit_Button"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/arrow_left"
        android:layout_margin="0dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        />

    </RelativeLayout>