<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/default_concert_background"
    >

    <TextView
        android:id="@+id/Artist1_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/Artist1"
        android:textSize="20dp"
        android:textColor="#ffffff"/>


    <TextView
        android:id="@+id/Time_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Venue_Title"
        android:layout_alignParentRight="true"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/Time"
        android:textColor="#ffffff"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/Venue_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/Venue"
        android:textColor="#ffffff"
        android:textSize="20dp"
        />


</RelativeLayout>
