<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".CreateLunchFragment">

    <!--Why is this so ugly? -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Share_Title"
        android:id="@+id/textview_share_title_2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/textview_venue_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_share_title_2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Venue_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/edit_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_venue_submit"
        android:layout_marginBottom="5dp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textview_address_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_venue"
        android:layout_marginBottom="5dp"
        android:text="@string/Address_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_address_submit"
        android:layout_marginBottom="5dp"
        android:singleLine="true"/>

    <LinearLayout
        android:id="@+id/zip_and_city__textview_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_address"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

    <TextView
        android:id="@+id/textview_city_submit"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/City_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>

        <TextView
            android:id="@+id/textview_zipcode_submit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_address"
            android:layout_toRightOf="@id/textview_city_submit"
            android:layout_marginBottom="5dp"
            android:text="@string/Zipcode_Submit"
            android:textStyle="bold"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/zip_and_city__edit_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zip_and_city__textview_row"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

    <EditText
        android:id="@+id/edit_city"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_city_submit"
        android:layout_marginBottom="5dp"
        android:singleLine="true"/>


    <EditText
        android:id="@+id/edit_zipcode"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/edit_city"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/textview_zipcode_submit"
        android:singleLine="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_url_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zip_and_city__edit_row"
        android:layout_marginBottom="5dp"
        android:text="@string/Venue_URL_Submit"
        android:textStyle="bold"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/edit_venue_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_url_submit"
        android:singleLine="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

    <ImageButton
        android:id="@+id/button_next"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="75dp"
        android:src="@drawable/arrow_right"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/arrow_left"
        android:layout_margin="0dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        />

    </RelativeLayout>

</RelativeLayout>
